00-master-node/04-kube-dashboard/02-dashboard-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dashboard-ingress
  namespace: kubernetes-dashboard
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
#  ingressClassName: nginx
#  ingressClassName: nginx-ingress-lb-oss
  ingressClassName: nginx-ingress

  rules:
  - host: dashboard.mashlab.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: kubernetes-dashboard
            port:
              number: 443
